--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
     <h4 class="js-greetings greetings"></h4>
     <form class="js-toDoForm">
-      <input type="text" placeholder="write a to do" />
+      <input type="text" placeholder="write a to do" required>
     </form>
     <ul class="js-toDoList"></ul>
     <script src="index.js"></script>
